--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -267,6 +267,56 @@ h3 {
   text-decoration: underline;
 }
 
+.rich-text-content ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+.rich-text-content ol {
+  list-style-type: none;
+  counter-reset: item;
+  padding-left: 2.5rem;
+  margin: 0.5rem 0;
+}
+
+.rich-text-content ol>li {
+  counter-increment: item;
+  position: relative;
+}
+
+.rich-text-content ol>li::before {
+  content: counters(item, ".") ". ";
+  position: absolute;
+  left: -3rem;
+  width: 2.8rem;
+  text-align: right;
+  padding-right: 0.5rem;
+  font-weight: 500;
+  color: var(--color-primary);
+  white-space: nowrap;
+}
+
+.rich-text-content li {
+  margin: 0.25rem 0;
+}
+
+.rich-text-content li p {
+  margin: 0;
+}
+
+/* Alignment */
+.rich-text-content [style*="text-align: center"] {
+  text-align: center;
+}
+
+.rich-text-content [style*="text-align: right"] {
+  text-align: right;
+}
+
+/* Indentation support handled via inline styles in custom extension */
+
+
 /* Attachment Link Styles */
 .attachment-link:hover {
   background-color: rgba(var(--color-primary-rgb), 0.05);
